--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>2.2.6.RELEASE</version>
+	<version>2.7.12</version>
 	<relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -45,11 +45,22 @@
 		<groupId>org.flywaydb</groupId>
 		<artifactId>flyway-core</artifactId>
 	</dependency>
+	  <dependency>
+		  <groupId>org.flywaydb</groupId>
+		  <artifactId>flyway-mysql</artifactId>
+	  </dependency>
     <dependency>
 	  <groupId>mysql</groupId>
 	  <artifactId>mysql-connector-java</artifactId>
+	  <version>8.0.33</version>
 	  <scope>runtime</scope>
     </dependency>
+	  <dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.12</version>
+		  <scope>test</scope>
+	  </dependency>
 	  <dependency>
 		  <groupId>com.h2database</groupId>
 		  <artifactId>h2</artifactId>
@@ -59,7 +70,12 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
-	</dependency>  
+	</dependency>
+	  <dependency>
+		  <groupId>org.springdoc</groupId>
+		  <artifactId>springdoc-openapi-ui</artifactId>
+		  <version>1.6.12</version>
+	  </dependency>
   </dependencies>
   
     <build>
