--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3307
 spring.datasource.username=root
 spring.datasource.password=manage
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.main.allow-circular-references=true
