--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 		  <scope>test</scope>
 	  </dependency>
 	  <dependency>
+		  <groupId>org.junit.vintage</groupId>
+		  <artifactId>junit-vintage-engine</artifactId>
+		  <version>5.6.3</version>
+		  <scope>test</scope>
+	  </dependency>
+	  <dependency>
 		  <groupId>com.h2database</groupId>
 		  <artifactId>h2</artifactId>
 		  <scope>test</scope>
@@ -85,6 +91,11 @@
             <artifactId>spring-boot-maven-plugin</artifactId>
             <version>2.2.2.RELEASE</version>
         </plugin>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>3.2.3</version>
+		  </plugin>
       </plugins>
     </build>  
 </project>
