Maven to Gradle project
Maven to Gradle project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-
-target/*
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 .idea/*
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
